# FDS_2D

./: .gitignore  CMakeLists.txt  PHYSICS_USAGE.md  README.md  build.bat  quick_build.bat  run.bat
lib/: box2d.lib
src/engine/audio/: FDS_AudioPlayer.cpp  FDS_AudioPlayer.h
src/engine/component/: FDS_Component.h  FDS_RigidBody_Component.cpp  FDS_RigidBody_Component.h  FDS_Sprite_Component.cpp  FDS_Sprite_Component.h  FDS_Transform_Component.cpp  FDS_Transform_Component.h
src/engine/core/: FDS_Config.cpp  FDS_Config.h  FDS_Context.cpp  FDS_Context.h  FDS_Game.cpp  FDS_Game.h  FDS_GameState.cpp  FDS_GameState.h  FDS_Time.cpp  FDS_Time.h  FDS_main.cpp
src/engine/input/: FDS_InputManager.cpp  FDS_InputManager.h
src/engine/object/: FDS_GameObject.cpp  FDS_GameObject.h
src/engine/physics/: FDS_PhysicsEngine.cpp  FDS_PhysicsEngine.h
src/engine/render/: FDS_Animation.cpp  FDS_Animation.h  FDS_Camera.cpp  FDS_Camera.h  FDS_Renderer.cpp  FDS_Renderer.h  FDS_Sprite.h  FDS_TextRenderer.cpp  FDS_TextRenderer.h
src/engine/resource/: FDS_AudioManager.cpp  FDS_AudioManager.h  FDS_FontManager.cpp  FDS_FontManager.h  FDS_ResourceManager.cpp  FDS_ResourceManager.h  FDS_TextureManager.cpp  FDS_TextureManager.h
src/engine/scene/: FDS_Scene.cpp  FDS_Scene.h  FDS_SceneManager.cpp  FDS_SceneManager.h
src/engine/ui/: FDS_UIButton.cpp  FDS_UIButton.h  FDS_UIElement.cpp  FDS_UIElement.h  FDS_UIImage.cpp  FDS_UIImage.h  FDS_UIInteractive.cpp  FDS_UIInteractive.h  FDS_UILabel.cpp  FDS_UILabel.h  FDS_UIManager.cpp  FDS_UIManager.h  FDS_UIPanel.cpp  FDS_UIPanel.h
(+16 files in other folders)
